[project]
name = "eunomia-mcp-server"
version = "0.0.2"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pip",
    "uv",
    "pydantic>=2.8.0",
    "python-dotenv==1.0.0",
    "pydantic-settings>=2.1.0",
    "mcp>=1.1.2",
    "eunomia-ai",
]
license = { text = "Apache-2.0 license" } 

[project.urls]
Repository = "https://github.com/whataboutyou-ai/eunomia-MCP-server"

[project.scripts]
orchestra_server = "orchestra_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"